# accouting-mcp

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  entrypoint.sh
docs/: QUICKSTART.md  TOOLS.md
src/qbo_mcp/: __init__.py  config.py  main.py  server.py
src/qbo_mcp/db/: connection.py  schema.py
src/qbo_mcp/qbo/: adapter.py  client.py  models.py
src/qbo_mcp/safety/: audit.py  draft.py  guards.py
src/qbo_mcp/tenant/: registry.py
src/qbo_mcp/tools/: crud.py  reports.py  workflows.py
tests/: conftest.py  test_crud.py  test_registry.py  test_reports.py  test_safety.py  test_workflows.py
