[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qbo-mcp"
version = "0.1.0"
description = "Open-source MCP server for QuickBooks Online"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[project.scripts]
qbo-mcp = "qbo_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qbo_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.coverage.run]
source = ["src/qbo_mcp"]
omit = [
    "src/qbo_mcp/main.py",
    "src/qbo_mcp/server.py",
    "src/qbo_mcp/tools/crud.py",
    "src/qbo_mcp/tools/reports.py",
    "src/qbo_mcp/tools/workflows.py",
    "src/qbo_mcp/qbo/client.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.12"
strict = true
